Added the particle.ino file and made some improvements

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,6 +2,6 @@
     text-align: center;
 }
 
-#feedback, .connections {
+#feedback, #status, .connections, .serverDown {
     text-align: center;
 }
